--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,16 @@
   --blue: #9da3ff;
   --yellow: #ffc067;
   --light-purple: #e0b0ff;
+  --gold: #efbf04;
   --light-yellow: #f8de7e;
-  --french-blue: #0018a8;
-  --french-red: #ed2e38;
+  --french-blue: #28388d;
+  --french-red: #e8303e;
   --light-blue: #b5c7eb;
   --secondary: #272727;
   --mainbg: #232323;
   --tertiary: #383838;
   --text-secondary: #bdbdbd;
+  --purple: #df75ff;
 }
 .container {
   display: flex;
@@ -31,6 +33,7 @@
   height: 100%;
   transition: 0.2s ease-in-out;
 }
+
 .stats-select {
   display: flex;
   justify-content: space-between;
@@ -38,6 +41,52 @@
   align-items: center;
   height: 100%;
   width: 100%;
+}
+.clicker {
+  height: 40%;
+  width: 100%;
+  display: flex;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.2s;
+  flex-direction: row;
+}
+.clicker:active {
+  transform: scale(0.95) !important;
+}
+.main-clicker {
+  width: 80%;
+  display: flex;
+  flex: 1;
+  align-items: flex-start;
+}
+.sinfo-container {
+  display: flex;
+  gap: 5%;
+  font-size: 1vw;
+  width: 100%;
+  flex-direction: row;
+}
+
+.clicker:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.clicker-blue {
+  height: 100%;
+  border-radius: 10px 0 0 10px;
+  flex: 1;
+  background-color: var(--french-blue);
+}
+.clicker-red {
+  height: 100%;
+  flex: 1;
+  border-radius: 0 10px 10px 0;
+  background-color: var(--french-red);
+}
+.clicker-white {
+  height: 100%;
+  width: auto;
+  flex: 1;
+  background-color: white;
 }
 .unlock-type:not(.uiselected):hover::after {
   content: "";
@@ -393,6 +442,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  align-items: center;
   height: 100%;
 }
 .stat-info {
@@ -400,9 +450,57 @@
   border: 1px solid var(--tertiary);
   border-radius: 10px;
   box-sizing: border-box;
-  padding: 5%;
+  padding: 3%;
+  flex-direction: column;
   display: flex;
-  gap: 5%;
+  width: 100%;
+  gap: 10%;
+}
+.progress {
+  width: 90%;
+  height: 100%;
+  border-radius: 10px;
+}
+.sinfo-container div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.delivery .progress {
+  border: 1px solid var(--gold);
+}
+.delivery {
+  color: var(--gold);
+}
+.production .progress {
+  border: 1px solid var(--purple);
+}
+.production {
+  color: var(--purple);
+}
+.sell-time {
+  border: 1px solid var(--money-green);
+}
+.progress-mini {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2.5%;
+  flex: 1;
+}
+.progress-container {
+  width: 100%;
+  height: 2.5vw;
+  gap: 20%;
+  display: flex;
+  flex-direction: column;
+}
+.progress .bar {
+  background-color: var(--purple);
+  border-radius: 10px;
+  height: 100%;
 }
 .selected {
   background-color: white;
