--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   gap: 5%;
   align-items: center;
   justify-content: center;
-  font-size: 1vw;
+  font-size: 120%;
   width: 100%;
   flex-direction: row;
 }
@@ -110,14 +110,12 @@
 }
 .item {
   width: 100%;
-  height: 25%;
   background-color: var(--secondary);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
 }
 .item-desc {
-  height: 70%;
   display: flex;
   position: relative;
   border-radius: 10px 10px 0 0;
@@ -129,7 +127,7 @@
 .item-buy {
   border: 1px solid var(--money-green);
   border-radius: 0 0 10px 10px;
-  height: 30%;
+  padding: 1%;
   color: var(--money-green);
   display: flex;
   align-items: center;
@@ -454,11 +452,10 @@
   border: 1px solid var(--tertiary);
   border-radius: 10px;
   box-sizing: border-box;
-  padding: 2.5%;
+  padding: 3%;
   flex-direction: column;
   display: flex;
   width: 100%;
-  gap: 10%;
 }
 .progress {
   width: 90%;
@@ -512,6 +509,7 @@
 .progress-mini {
   width: 100%;
   display: flex;
+  font-size: 120%;
   flex-direction: row;
   align-items: center;
   gap: 2.5%;
@@ -519,7 +517,7 @@
 }
 .progress-container {
   width: 100%;
-  height: 2.5vw;
+  margin-top: 2.5%;
   gap: 20%;
   display: flex;
   flex-direction: column;
