--- a/src/App.css
+++ b/src/App.css
@@ -613,3 +613,41 @@
   border: 1px solid white;
   border-radius: 10px;
 }
+.enhancement {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.enhancement-desc {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+}
+.enhancement-name {
+  font-size: 150%;
+}
+.ingredients-header {
+  font-size: 150%;
+}
+.ingredient {
+  position: relative;
+}
+.ingredient-divider {
+  flex: 0.8;
+  border-bottom: 1px solid var(--text-secondary);
+  height: 0;
+}
+.enhancement-cost {
+  display: flex;
+  flex: 1;
+  margin-left: 15%;
+  flex-direction: column;
+}
+.enhancement-ingredient {
+  align-items: center;
+  display: flex;
+  position: relative;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: row;
+}
