--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body,
 html {
   margin: 0;
   height: 100%;
+  width: 100%;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
 }
